Fix attendees page being too wide on mobile

--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -76,6 +76,7 @@ html {
   justify-content: flex-start;
   align-items: center;
   margin-bottom: 0.5rem;
+  max-width: 100%;
 
   h1,
   h2,
